@@ -1,0 +1,10 @@
+Title: Views: Silently ignore configured but not existing view filters
+Level: 1
+Component: multisite
+Class: fix
+Compatible: compat
+State: unknown
+Version: 1.2.8p18
+Date: 1487588005
+
+
